src/test/ui/issues/issue-17999.stderr
error: unused variable: `x`
  --> $DIR/issue-17999.rs:5:13
   |
LL |         let x = ();
   |             ^ help: consider prefixing with an underscore: `_x`
   |
note: lint level defined here
  --> $DIR/issue-17999.rs:1:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^

error: unused variable: `a`
  --> $DIR/issue-17999.rs:7:13
   |
LL |             a => {}
   |             ^ help: consider prefixing with an underscore: `_a`

error: aborting due to 2 previous errors

